[package]
name = "rm1masm"
description = "MICRO-1 micro assembler written in Rust"
authors = ["Kenta Arai @isKenta14"]
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[profile.release]
strip = true

[dependencies]
clap = "2.33.3"
logos = "0.12.0"
chumsky = "0.8.0"
ariadne = "0.1.5"
